@@ -1,1 +1,8 @@
 # demo-blockingqueue-4performance
+
+By starting 2 java processes, to evaluate the performance of big blockingQueue (without size assignment or very big size) and Mem/Cpu usages.
+
+### VM options:
+
+-server -Xms4096m -Xmx8192m -XX:PermSize=128M -XX:MaxPermSize=128M
+
